Rolled back the Jape implementation